Product-14, spelling corrected

--- a/product-14.html
+++ b/product-14.html
@@ -100,19 +100,19 @@
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
-<p>DIY "Space Invader" байка або байкі з касмічнымі захопнікамі прысвечаны <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульні</a>.</p>
+<p>DIY-байкi "Space Invader" або байкі з касмічнымі захопнікамі прысвечаны <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульні</a>.</p>
 
-<p>Мем стаў шырока распаўсюджаны сярод 8-бітных гульнявых гікаў па ўсяму свету.</p>
+<p>Мем стаў шырока распаўсюджаным сярод гiкаў-аматараў 8-бітных гульняў па ўсiм свеце.</p>
 
-<p>На наш погляд касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але цікавыя мэссэджы: be different, for free software, for sharing і іншыя. Зараз вы можаце замовіць худзі зялёнага ці шэрага колера з надпісамі і колерамі, як на выявах.</p>
+<p>На наш погляд, касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але i цікавыя мэссэджы: be different, for free software, for sharing і іншыя. Зараз вы можаце замовіць худзі зялёнага ці шэрага колеру з надпісамі і афармленнем як на выявах.</p>
 
 <h4><a href="https://github.com/rizomaa/prints/blob/master/space-invader-for-free-software-2.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> або <a href="https://github.com/rizomaa/prints/blob/master/space-invader-be-different.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі 2</a> + шрыфт Joystik</h4>
 
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Зіма ў нас наступае рана ці позна. Худзі можна насіць круглы год, асабліва, калі лета не багата на сонечныя дні. Таму першы алгарытм -прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Зіма ў нас настае рана ці позна. Худзі можна насіць круглы год, асабліва калі лета не багата на сонечныя дні. Таму першы алгарытм - прыглядзець для сябе памерчык і насіць да дыр.</li>
 			<li>Худзі выдатны падарунак амаль у любы час году і зробіць дзень вашай дзяўчыне або хлопцу. Не тармазі!</li>
-			<li>Калі вы пагуляеце ў саму <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульню</a> магчыма зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі. Эксперыментуйце!</li>
+			<li>Калі вы пагуляеце ў саму <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульню</a>, напэўна зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі. Эксперыментуйце!</li>
 		</ul>
 
 		<p> Ваш памер і колер: пазначайце ў замове.</p>
