new goods added: pirates posters 2, free software hoody, buby hoody; some mistakes with titles and links fixed

--- a/product-17.html
+++ b/product-17.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="цішоткі, майкі, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, 8 бит, 8 біт, 8 bit, t-shirt, пэкмэн, pacman, inkey, pinkey, blinkey, clyde">
 
-    <title>Гік-лаўка - DIY-цішоткі free software</title>
+    <title>Гік-лаўка - DIY-цішоткі з бубамі</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
