--- a/product-15.html
+++ b/product-15.html
@@ -108,7 +108,7 @@
 
 <p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свабодна устанаўліваць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свабоднай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па-чацвёртае, вы можаце распаўсюджваць змененую праграму.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/blob/master/free-software-use.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/tree/master/love_free_software" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
