--- a/product-19.html
+++ b/product-19.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, налепкі, слімакі, наклейки, улитки, наклейки на ноутбук, вікі, смоўж, віпедыя, налепкі на ноўтбук">
+    <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, гік, гик, принты, худзі, джемпер, байка з прынтамі, байка с принтом, прынты, diy, 8 бит, 8 біт, 8 bit, space invader belarus, мемы, t-shirt, space invader">
 
-    <title>Гік-лаўка - Налепкі са слімакамі</title>
+    <title>Гік-лаўка - Байкі free software</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -80,9 +80,8 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">3 руб.</h1>
-                <h1 class="page-header">Налепкі са слімакамі 
-		<small>кошт за камплект (5 штук)</small>
+		<h1 class="pull-right">45 руб.</h1>
+                <h1 class="page-header">Байкі free software
                 </h1>
 </div>
             </div>
@@ -93,28 +92,33 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/pr18/slimaki_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_3_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/wiki_letnik_2017_mini.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_25_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_2_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_24_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_6_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_20_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_13_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr19/fs_hoody_21_mini.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Вікі-слімак - істота, якая стала сімвалам развіцця вікіпедыйнай супольнасці Беларусі. Супольнасць развіваецца пакрыху і паўзе. Разнакаляровыя варыянты сведчаць пра тое, што ўсе мы крыху па-свойму розныя.</p>
-		<p>Тут есць і фота з першага вікі-летніка у Беларусі, дзе вы можаце пабачыць банер з лагатыпам слімака.</p>
-		<p>У адзін пакунак мы абіраем 5 любых каляровых слімакоў.</p>		
-		<h4><a href="https://github.com/Wikification/swag/tree/master/nalepki/letnik_2017" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+              
+
+<p>DIY-байка (або худзі) "I <3 free software" прысвечана свабоднаму праграмнаму забеспячэнню. Зараз вы можаце замовіць худзі з надпісамі: "I love free software".</p>
+<p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свабодна ўстанаўліваць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свабоднай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па-чацвёртае, вы можаце распаўсюджваць змененую праграму.</p>
+
+<h4><a href="https://github.com/rizomaa/prints/tree/master/love_free_software" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
+
+		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Клеіць на ноўт, мабільнік або тэчку.</li>
-			<li>Зрабіць магніт.</li>
-			<li>Падарыць сваім незвычайным сябрам, і распавесці ім пра беларускую Вікіпедыю.</li>
+			<li>Зіма ў нас наступае рана ці позна. Худзі можна насіць круглы год, асабліва, калі лета не багата на сонечныя дні. Таму першы алгарытм -прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Худзі выдатны падарунак амаль у любы час году і зробіць дзень вашай дзяўчыне або хлопцу. Можна набыць сябру на дзень народзінаў, або прафесійнае гік-свята. Не тармазі!</li>
 		</ul>
-		
-		<p> Памер налепкі: 65 мм у даўжыню</p>
 
-		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
+		<p> Памер і колер байкі: пазначайце ў замове. Такія, як на фота, ёсць памеры: 46 (ж), 50 (м)</p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
@@ -131,36 +135,37 @@
 
 
  <div class="row">
-           <div class="col-lg-12">
+            <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-			<h3><a href="product-1.html">Мэш-налепкі</a></h3>
+			<h3><a href="product-15.html">DIY-цішоткі free software</a></h3>
                 </div>
-                <a href="product-6.html">
-                    <img class="img-responsive" src="images/products/pr6/mesh_cover.jpg" alt="">
+                <a href="product-15.html">
+                    <img class="img-responsive" src="images/products/pr15/8bit_heart_cover.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
- 			<h3><a href="product-7.html">Роварныя налепкі</a></h3>
+ 			<h3><a href="product-14.html">Худзі Space Invader </a></h3>
                 </div>
-                <a href="product-7.html">
-                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
+                <a href="product-14.html">
+                    <img class="img-responsive" src="images/products/pr14/hoody_invader_cover.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">                               
-                   <h3><a href="product-4.html">Налепкі для Творчасці</a></h3>
+                   <h3><a href="product-17.html">DIY-цішоткі з бубамі</a></h3>
                 </div>                
 
-                <a href="product-4.html">
-                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
+                <a href="product-17.html">
+                    <img class="img-responsive" src="images/products/pr17/buby_1_10_mini_cover.JPG" alt="">
                 </a>
-            </div>       
+            </div>  
+
         </div>
         <!-- /.row -->
 
