--- a/product-20.html
+++ b/product-20.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, налепкі, слімакі, наклейки, улитки, наклейки на ноутбук, вікі, смоўж, віпедыя, налепкі на ноўтбук">
+    <meta name="description" content="pacman, pinkey, inkey, clyde, пэкмэн, бубы, адкрыты код, open source, shell, bash, linux, лінукс, гік, гик, принты, худзі, джемпер, байка з прынтамі, байка с принтом, прынты, diy, 8 бит, 8 біт, 8 bit, space invader belarus, мемы, t-shirt, space invader">
 
-    <title>Гік-лаўка - Налепкі са слімакамі</title>
+    <title>Гік-лаўка - Байкі з бубамі</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -80,9 +80,8 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">3 руб.</h1>
-                <h1 class="page-header">Налепкі са слімакамі 
-		<small>кошт за камплект (5 штук)</small>
+		<h1 class="pull-right">45 руб.</h1>
+                <h1 class="page-header">Байкі з бубамі
                 </h1>
 </div>
             </div>
@@ -93,28 +92,35 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/pr18/slimaki_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_3_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/wiki_letnik_2017_mini.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_15_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_22_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_5_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_16_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_21_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_1_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr20/buby_hoody_20_mini.JPG" alt=""></p>
+
             </div>
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Вікі-слімак - істота, якая стала сімвалам развіцця вікіпедыйнай супольнасці Беларусі. Супольнасць развіваецца пакрыху і паўзе. Разнакаляровыя варыянты сведчаць пра тое, што ўсе мы крыху па-свойму розныя.</p>
-		<p>Тут есць і фота з першага вікі-летніка у Беларусі, дзе вы можаце пабачыць банер з лагатыпам слімака.</p>
-		<p>У адзін пакунак мы абіраем 5 любых каляровых слімакоў.</p>		
-		<h4><a href="https://github.com/Wikification/swag/tree/master/nalepki/letnik_2017" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+              
+
+<p>У нашых вільготна-балотных умовах байкі (іншымі словамі худзі) з героямі гульні пэкмэн сагрэюць у самае нянасце.</p>
+<p>Pacman - адна з найпершых васьмібітных гульняў, якая пакарыла свет. За пэкмэнам ганяецца 4 істоты: Пінкі, Інкі, Блінкі і Клайд. Мы стварылі лінейку худзі з імі. Зараз вы можаце набыць худзі з Пінкі і Інкі.</p>
+
+<h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
+
+		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Клеіць на ноўт, мабільнік або тэчку.</li>
-			<li>Зрабіць магніт.</li>
-			<li>Падарыць сваім незвычайным сябрам, і распавесці ім пра беларускую Вікіпедыю.</li>
+			<li>Зіма ў нас наступае рана ці позна. Худзі можна насіць круглы год, асабліва, калі лета не багата на сонечныя дні. Таму першы алгарытм -прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Худзі выдатны падарунак амаль у любы час году і зробіць дзень вашай дзяўчыне або хлопцу. Не тармазі!</li>
+			<li>Калі вы пагуляеце ў саму гульню магчыма зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі. Эксперыментуйце!</li>
 		</ul>
-		
-		<p> Памер налепкі: 65 мм у даўжыню</p>
 
-		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
+		<p>Памер і колер байкі: пазначайце ў замове. Такія, як на фота, ёсць памеры: 46 (ж), 52 (м)</p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
@@ -131,36 +137,38 @@
 
 
  <div class="row">
-           <div class="col-lg-12">
+            <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 portfolio-item">
-		<div class="caption">
-			<h3><a href="product-1.html">Мэш-налепкі</a></h3>
-                </div>
-                <a href="product-6.html">
-                    <img class="img-responsive" src="images/products/pr6/mesh_cover.jpg" alt="">
-                </a>
-            </div>
-
-            <div class="col-md-4 portfolio-item">
-		<div class="caption">
- 			<h3><a href="product-7.html">Роварныя налепкі</a></h3>
-                </div>
-                <a href="product-7.html">
-                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
-                </a>
-            </div>
-
-            <div class="col-md-4 portfolio-item">
+ 		
+	<div class="col-md-4 portfolio-item">
 		<div class="caption">                               
-                   <h3><a href="product-4.html">Налепкі для Творчасці</a></h3>
+                   <h3><a href="product-10.html">Цішотка для гіка</a></h3>
                 </div>                
 
-                <a href="product-4.html">
-                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
+                <a href="product-10.html">
+                    <img class="img-responsive" src="images/products/pr10/geek_shirt_4.jpg" alt="">
                 </a>
-            </div>       
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-16.html">DIY-цішоткі pacman </a></h3>
+                </div>
+                <a href="product-16.html">
+                    <img class="img-responsive" src="images/products/pr16/packman_13_cover.JPG" alt="">
+                </a>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-14.html">Худзі Space Invader </a></h3>
+                </div>
+                <a href="product-14.html">
+                    <img class="img-responsive" src="images/products/pr14/hoody_invader_cover.jpg" alt="">
+                </a>
+            </div>
+
         </div>
         <!-- /.row -->
 
