--- a/product-21.html
+++ b/product-21.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, налепкі, слімакі, наклейки, улитки, наклейки на ноутбук, вікі, смоўж, віпедыя, налепкі на ноўтбук">
+    <meta name="description" content="плакаты, постеры для гика, лічбавыя права, прыватнасць, цифровые права, приватность, копирайт, пиратские плакаты, купить в минске, набыць у мінску.">
 
-    <title>Гік-лаўка - Налепкі са слімакамі</title>
+    <title>Гік-лаўка - Пірацкія плакаты 2</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -80,9 +80,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">3 руб.</h1>
-                <h1 class="page-header">Налепкі са слімакамі 
-		<small>кошт за камплект (5 штук)</small>
+		<h1 class="pull-right">12 руб.</h1>
+                <h1 class="page-header">Пірацкія плакаты 2
+		<small>Адна штука</small>
                 </h1>
 </div>
             </div>
@@ -93,26 +93,28 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/pr18/slimaki_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/slimaki_3_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr18/wiki_letnik_2017_mini.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr21/pi_posters_2_10_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr21/pi_posters_2_4_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr21/pi_posters_2_3_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr21/pi_posters_2_6_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr21/pi_posters_2_8_mini.JPG" alt=""></p>
             </div>
+
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Вікі-слімак - істота, якая стала сімвалам развіцця вікіпедыйнай супольнасці Беларусі. Супольнасць развіваецца пакрыху і паўзе. Разнакаляровыя варыянты сведчаць пра тое, што ўсе мы крыху па-свойму розныя.</p>
-		<p>Тут есць і фота з першага вікі-летніка у Беларусі, дзе вы можаце пабачыць банер з лагатыпам слімака.</p>
-		<p>У адзін пакунак мы абіраем 5 любых каляровых слімакоў.</p>		
-		<h4><a href="https://github.com/Wikification/swag/tree/master/nalepki/letnik_2017" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+                <p>Гэта працяг калекцыі пірацкіх плакатаў, якая нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць захавання прыватнасці, свабоднага цыркулявання ведаў і іншыя выклікі лічбавай эпохi. Выстава плакатаў адбывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, такiмi як "Паскарай паўраспад капірайта", "Ты хутка станеш піратам", "Антыпрызма", "Дзяліся творчасцю", "Беларускі ананімус" і іншымi. Зараз вы можаце набыць сабе падобны плакат.</p>
+                <p>Таксама можаце праглядзець <a href="https://geeklauka.by/product-9.html" target="_blank">першую частку</a> калекцыі пірацкіх плакатаў.</p>
+
+		<h4><a href="https://github.com/svetit/2014-2017-posters-pirates-campaign/tree/master/posters_by" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Клеіць на ноўт, мабільнік або тэчку.</li>
-			<li>Зрабіць магніт.</li>
-			<li>Падарыць сваім незвычайным сябрам, і распавесці ім пра беларускую Вікіпедыю.</li>
+			<li>Павесіць на сцяну або падкласці пад оргшкло працоўнага стала.</li>
+			<li>Мадыфікаваць і расшарыць ідэю новага плаката для іншых.</li>
+			<li>Падарыць сябрам, якія падзяляюць агульныя погляды.</li>
 		</ul>
-		
-		<p> Памер налепкі: 65 мм у даўжыню</p>
+
+		<p><strong>Памер плаката:</strong> А2 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
@@ -129,17 +131,16 @@
 
  <div class="container">
 
-
  <div class="row">
            <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-			<h3><a href="product-1.html">Мэш-налепкі</a></h3>
+			<h3><a href="product-1.html">Кансольныя паштоўкі</a></h3>
                 </div>
-                <a href="product-6.html">
-                    <img class="img-responsive" src="images/products/pr6/mesh_cover.jpg" alt="">
+                <a href="product-1.html">
+                    <img class="img-responsive" src="images/products/pr1/console_post_5.JPG" alt="">
                 </a>
             </div>
 
@@ -163,6 +164,7 @@
             </div>       
         </div>
         <!-- /.row -->
+
 
 
 
@@ -241,7 +243,7 @@
             <div class="row">
           
       <div class="col-md-4">
-		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
+		    <p>Гік-лаўка 2018 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
 </div>
 
 
