bad links to github fixed

--- a/product-13.html
+++ b/product-13.html
@@ -106,7 +106,7 @@
 
 <p>На наш погляд, касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але і цікавыя мэссэджы: be different, for free software і іншыя. Зараз вы можаце замовіць цішоткі белага і чорнага колераў з надпісамі і колерамі, як на выявах.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/blob/master/space-invader-for-free-software-2.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> або <a href="https://github.com/rizomaa/prints/blob/master/space-invader-be-different.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі 2</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/tree/master/space_invader" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
