--- a/workshop-3.html
+++ b/workshop-3.html
@@ -101,16 +101,16 @@
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-		<p> На майстар-класе мы ствараем упрыгожванні з ethernet кабелю. З дапамогой вітой пары і канэктараў можна стварыць аўтэнтычныя завушніцы, браслеты і нават сплесці пояс. Таксама можна ствараць іншыя вырабы, на якія хопіць фантазіі і кабелю.</p>
+		<p> На майстар-класе мы ствараем упрыгожванні з ethernet кабелю. З дапамогай вітой пары і канэктараў можна стварыць аўтэнтычныя завушніцы, браслеты і нават сплесці пояс. Таксама можна ствараць іншыя вырабы, на якія хопіць фантазіі і кабелю.</p>
 
 		<h3 class="vodst-up-30">Як выкарыстаць далей</h3>
 		<ul>
 			<li>Апранаць завушніцы на вечарыну для тэхнароў і праграмістаў. Яны дакладна зацэняць.</li>
 			<li>Насіць кулончык з канэктарам ад зглазу і кібер-атак у інтэрнэце. Разам з гэтым добра і паляпшаць свае веды пра сеткавую бяспеку.</li>
-			<li>Адчуць сябе крыху кабельшчыкам, які праводзіў у вас у хаце інтэрнэт і пранікнуцца павагай да гэтай прафесіі.</li>
+			<li>Адчуць сябе крыху кабельшчыкам, які праводзіў у вас у хаце інтэрнэт, і пранікнуцца павагай да гэтай прафесіі.</li>
 		</ul>
 
-		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
+		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу можна па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default">Удзельнічай</a>
 
             </div>
