--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-12">
 
 
-<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" > <!-- novalidate -->
+<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" >
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Email*</label>
@@ -137,23 +137,22 @@
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Імя</label>
-	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя" pattern="[A-Za-zА-Яа-яЁё]{1,22}" title="Допустимы только русские и латинские символы, не более 20">
+	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Прозвішча</label>
-	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча" pattern="[A-Za-zА-Яа-яЁё]{1,22}" title="Допустимы только русские и латинские символы, не более 20">
+	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
     </div>
     <input type="submit" value="Падпісацца" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
-
 
 <div id="mce-responses" class="clear">
 		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong> </div>
 		<div class="response alert alert-info" id="mce-success-response" style="display:none"> <strong>Памылка!</strong> </div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    </div>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
 
-<!--	<button type="submit" class="btn btn-lg btn-default">Падпісацца</button>-->
 </form>
 
 
@@ -218,7 +217,7 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
-    <script src="js/jqBootstrapValidation.js"></script> 
+    <script src="js/jquery.validate.min.js"></script> 
     <script src="js/custom.js"></script>
 
 </body>
