--- a/product-19.html
+++ b/product-19.html
@@ -221,7 +221,7 @@
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
 
-<!--	<button type="submit" class="btn btn-lg btn-default">Падпісацца</button>-->
+
 </form>
 
 
@@ -284,7 +284,7 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
-    <script src="js/jqBootstrapValidation.js"></script> 
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
