--- a/index.html
+++ b/index.html
@@ -586,9 +586,15 @@ END Donate block -->
         <footer>
             <div class="row">
           
-     <div class="col-md-4">
-		    <p>Гік-лаўка 2018 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
-     </div>
+                <div class="col-md-4">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <p class="navbar-text">
+                                Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
 
 <div class="col-md-8">
      <ul class="nav navbar-nav navbar-right">
