--- a/product-3.html
+++ b/product-3.html
@@ -107,13 +107,13 @@
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Клёвыя паштоўкі ў падарунак гіку і гічке/гікаўне на беларускай мове.</p>
-		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў: выхад з матрыцы, дзяліцца - клапаціцца, эксперыментуй, уступай у рады Фур'е. Як бачым, гэта і дзёрзкія воклічы, і сур'ёзныя пытанні для ўсяго грамадства. У камплекце 5 паштовак</p>
+                <p>Клёвыя паштоўкі на беларускай мове ў падарунак гіку і гічцы.</p>
+		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў: выхад з матрыцы, дзяліцца - клапаціцца, эксперыментуй, уступай у рады Фур'е. Як бачым, гэта і дзёрзкія воклічы, і сур'ёзныя пытанні для ўсяго грамадства. У камплекце 5 паштовак.</p>
 		<h4><a href="https://github.com/svetit/2016-postcards-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Здзівіце сваю сяброўку або сябрука у любы дзень, або Дзень народзінаў</li>
-			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
+			<li>Здзівіце сваю сяброўку або сябрука у Дзень народзінаў або любы дзень.</li>
+			<li>Перадайце проста ў рукі пры сустрэчы i растлумачце, чаму вам мэссэдж паштоўкі важны.</li>
 			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
 		</ul>
 
