--- a/product-3.html
+++ b/product-3.html
@@ -113,7 +113,7 @@
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Здзівіце сваю сяброўку або сябрука у Дзень народзінаў або любы дзень.</li>
-			<li>Перадайце проста ў рукі пры сустрэчы i растлумачце, чаму вам мэссэдж паштоўкі важны.</li>
+			<li>Перадайце проста ў рукі пры сустрэчы і растлумачце, чаму вам мэссэдж паштоўкі важны.</li>
 			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
 		</ul>
 
