сделал всё strong

--- a/product-13.html
+++ b/product-13.html
@@ -119,7 +119,7 @@
 			<li>Калі вы пагуляеце ў саму гульню  http://www.pacxon4u.com/space-invaders/ напэўна, зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі.</li>
 		</ul>
 
-		<p> Памер і колер цішоткі: пазначайце ў замове. </p>
+		<p><strong> Памер і колер цішоткі</strong>: пазначайце ў замове. </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
