--- a/product-14.html
+++ b/product-14.html
@@ -118,7 +118,7 @@
 			<li>Калі вы пагуляеце ў саму <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульню</a>, напэўна зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі. Эксперыментуйце!</li>
 		</ul>
 
-		<p> Ваш памер і колер: пазначайце ў замове.</p>
+		<p><strong> Ваш памер і колер:</strong> пазначайце ў замове.</p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
