--- a/product-15.html
+++ b/product-15.html
@@ -121,7 +121,7 @@
 			<li>Разам з набыццём цішоткі паспрабуйце пераставіць сабе аперацыйную сістэму. Каманда з <a href="https://it.falanster.by/" target="_blank">Лічбавай майстэрні дапаможа</a></li>
 		</ul>
 
-		<p> Памер і колер цішоткі: пазначайце ў замове. </p>
+		<p><strong> Памер і колер цішоткі:</strong> пазначайце ў замове. </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
