--- a/product-16.html
+++ b/product-16.html
@@ -119,7 +119,7 @@
 			<li>Можна набыць сябру на дзень народзінаў, або прафесійнае гік-свята.</li>
 		</ul>
 
-		<p> Памер і колер цішоткі: пазначайце ў замове. Есць памеры: 44 (ж), 48 (м)</p>
+		<p><strong> Памер і колер цішоткі:</strong> пазначайце ў замове. Есць памеры: 44 (ж), 48 (м)</p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
