--- a/product-17.html
+++ b/product-17.html
@@ -122,7 +122,7 @@
 			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Часам гэта можа выглядаць даволі няшна.</li>
 		</ul>
 
-		<p> Памер і колер цішоткі: пазначайце ў замове. Есць памеры: 44-46 (ж), 48-50 (м)</p>
+		<p><strong> Памер і колер цішоткі:</strong> пазначайце ў замове. Есць памеры: 44-46 (ж), 48-50 (м)</p>
 		<p>* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
             </div>
