--- a/product-18.html
+++ b/product-18.html
@@ -115,7 +115,7 @@
 			<li>Падарыць сваім незвычайным сябрам, і распавесці ім пра беларускую Вікіпедыю.</li>
 		</ul>
 		
-		<p> Памер налепкі: 65 мм у даўжыню</p>
+		<p><strong> Памер налепкі:</strong> 65 мм у даўжыню</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
