--- a/product-19.html
+++ b/product-19.html
@@ -117,7 +117,7 @@
 			<li>Худзі выдатны падарунак амаль у любы час году і зробіць дзень вашай дзяўчыне або хлопцу. Можна набыць сябру на дзень народзінаў, або прафесійнае гік-свята. Не тармазі!</li>
 		</ul>
 
-		<p> Памер і колер байкі: пазначайце ў замове. Такія, як на фота, ёсць памеры: 46 (ж), 50 (м)</p>
+		<p><strong> Памер і колер байкі:</strong> пазначайце ў замове. Такія, як на фота, ёсць памеры: 46 (ж), 50 (м)</p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
