--- a/product-2.html
+++ b/product-2.html
@@ -114,7 +114,7 @@
 			<li>Так не чакайце свята, проста адпраўляйце іх сёння сваім дзядулям, бабулям, цеткам, дзядзькам.  Дарыце ім больш гікаўскай культуры.</li>
 		</ul>
 		
-		<p> Памер паштоўкі: А6 </p>
+		<p><strong> Памер паштоўкі:</strong> А6 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
