--- a/product-4.html
+++ b/product-4.html
@@ -113,7 +113,7 @@
 			<li>Падарыце сябрам, якія займаюцца творчасцю.</li>
 		</ul>
 
-		<p> Дыяметр налепкі: 5,5см </p>
+		<p><strong> Дыяметр налепкі:</strong> 5,5см </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>	
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
