--- a/product-5.html
+++ b/product-5.html
@@ -116,7 +116,7 @@
 			<li>Вывучайце каманды гіта такім чынам.</li>
 		</ul>
 
-		<p> Шырыня налепкі: 8см </p>
+		<p><strong> Шырыня налепкі:</strong> 8см </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
