--- a/product-6.html
+++ b/product-6.html
@@ -117,7 +117,7 @@
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Падарыце сябрам, якія наладжваюць сеткі, адміняць сервакі, або любяць перастаўляць сістэмы</li>
 		</ul>
-		<p> Памер налепкі: 5х5см </p>
+		<p><strong> Памер налепкі:</strong> 5х5см </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
