--- a/product-7.html
+++ b/product-7.html
@@ -115,7 +115,7 @@
 			<li>Падарыце вашым сябрам раварыстам.</li>
 		</ul>
 
-		<p> Шырыня налепкі: 15см </p>
+		<p><strong> Шырыня налепкі:</strong> 15см </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
