--- a/product-1.html
+++ b/product-1.html
@@ -118,7 +118,7 @@
 			<li>Выкарыстаць як запрашэнне на гікаўскае мерапрыемства знаёмых або калег.</li>
 		</ul>
 
-		<p> Памер паштоўкі: А6 </p>
+		<p><strong> Памер паштоўкі:</strong> А6 </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
