add dynamic load for navigation, footer

--- a/product-6.html
+++ b/product-6.html
@@ -34,42 +34,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="index.html">
-                    <img src="images/geek_lauka_logo.png" alt="">
-                </a>
-                <!--<a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>-->
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="about.html">Пра нас</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#padpiska">Падпіска</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navigation">
     </nav>
 
 <!-- Page Content -->
@@ -239,41 +204,7 @@
 </div>
 
 
-<div class="container">
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-md-4">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <p class="navbar-text">
-                                Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-8">
-                    <ul class="nav navbar-nav navbar-right">
-                        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <li>
-                            <a class="page-scroll" href="about.html">Пра нас</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="contact.html">Кантакт</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+    <div class="container" id="footer">
     </div>
     <!-- /.container -->
 
