--- a/product-20.html
+++ b/product-20.html
@@ -77,13 +77,15 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
-<div class="caption-product">
-		<h1 class="pull-right">45 руб.</h1>
-                <h1 class="page-header">Байкі з бубамі
-                </h1>
-</div>
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
+                <div class="caption-product">
+		            <h1 class="pull-right">45 руб.</h1>
+                    <h1 class="page-header">Байкі з бубамі</h1>
+                </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
@@ -121,7 +123,7 @@
 
 		<p>Памер і колер байкі: пазначайце ў замове. Такія, як на фота, ёсць памеры: 46 (ж), 52 (м)</p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
-		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
             </div>
 
@@ -247,13 +249,16 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-          
-      <div class="col-md-4">
-		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
-</div>
-
-
-<div class="col-md-8">
+                <div class="col-md-4">
+                    <ul class="nav navbar-nav">
+                            <li>
+                                <p class="navbar-text">
+                                    Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
+                                </p>
+                            </li>
+                        </ul>
+                </div>
+                <div class="col-md-8">
                     <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
@@ -265,7 +270,7 @@
                     <li>
                         <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
                     </li>
-		    <li>
+        		    <li>
                         <a class="page-scroll" href="contact.html">Кантакт</a>
                     </li>
                 </ul>
