--- a/footer.html
+++ b/footer.html
@@ -1,32 +1,52 @@
-        <hr>
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-md-4">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <p class="navbar-text">
-                                Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-8">
-                    <ul class="nav navbar-nav navbar-right">
-                        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <li>
-                            <a class="page-scroll" href="about.html">Пра нас</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="contact.html">Кантакт</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+<hr>
+<!-- Footer -->
+<footer>
+    <div class="row">
+        <div class="col-md-4">
+            <ul class="nav navbar-nav">
+                <li>
+                    <p class="navbar-text">
+                        Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-8">
+            <ul class="nav navbar-nav navbar-right">
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li>
+                    <a class="page-scroll" href="about.html">Пра нас</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="contact.html">Кантакт</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-12">
+            <ul class="pull-right nav navbar-nav socnetwork">
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li>
+                    <a href="https://vk.com/geeklauka">
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/geeklauka.by/">
+                        <i class="fa fa-facebook-f" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/geek_lauka/">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
