--- a/workshop-2.html
+++ b/workshop-2.html
@@ -130,69 +130,12 @@
 
 
 
-
-
-
-        <!-- Page Sub Header -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Падпіска
-                </h2>
-            </div>
-        </div>
-        <!-- /.row -->
-
- <!-- Call to Action Section -->
-        <div class="well" id="padpiska">
-            <div class="row">
-
- <div class="col-lg-12">
-                    <p>Падпішыцеся! Мы будзем трымаць вас у курсе пра абнаўленні асартымента, зніжкі, акцыі і наогул жыццё нашай <a href="https://falanster.by" target="_blank">суполкі</a>. Рассылка адбываецца не часцей чым раз на месяц.</p>
-                </div>
-
-
-                <div class="col-lg-12">
-
-
-<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Email*</label>
-	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email*">
-    </div>
-
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Імя</label>
-	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя">
-    </div>
-
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Прозвішча</label>
-	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
-    </div>
-    <input type="submit" value="Падпісацца" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
-
-
-<div id="mce-responses" class="clear">
-		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong> </div>
-		<div class="response alert alert-info" id="mce-success-response" style="display:none"> <strong>Памылка!</strong> </div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
-
-
-</form>
-
-
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-
-
-                </div>
-            </div>
-        </div>
-
-
 </div>
+<!-- /.container -->
+
+
+    <div class="container" id="subscribe">
+    </div>
 
 
     <div class="container" id="footer">
@@ -203,6 +146,7 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -210,7 +154,8 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
+
+    <script src="js/subscribe.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
