--- a/faq.html
+++ b/faq.html
@@ -81,55 +81,8 @@
     <!-- /.container -->
 
 
- <div class="container">
-
-        <!-- Page Sub Header -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Падпіска
-                </h2>
-            </div>
-        </div>
-        <!-- /.row -->
-
-
- <!-- Call to Action Section -->
-        <div class="well">
-            <div class="row">
-
- <div class="col-lg-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-                </div>
-
-
-                <div class="col-lg-12">
-
-<form class="form-inline">
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Email*</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Email*">
+    <div class="container" id="subscribe">
     </div>
-
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Імя</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Імя">
-    </div>
-
-    <div class="form-group input-group-lg">
-        <label class="sr-only" for="inputEmail">Прозвішча</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Прозвішча">
-    </div>
-       
-    <button type="submit" class="btn btn-lg btn-default">Падпісацца</button>
-</form>
-
-                </div>
-            </div>
-        </div>
-
-
-</div>
-
 
     <div class="container" id="footer">
     </div>
@@ -139,6 +92,7 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -146,6 +100,9 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+
+    <script src="js/subscribe.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
 
