added new section - service

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, цішоткі">
     <meta name="author" content="">
 
-    <title>Гік-лаўка. Тавары і майстар-класы для гіка ад супольнасці Фаланстэра</title>
+    <title>Гік-лаўка. Паслугі, майстар-класы і сувеніры для гіка ад супольнасці Фаланстэра</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
