--- a/navigation.html
+++ b/navigation.html
@@ -22,6 +22,9 @@
             <li>
                 <a class="page-scroll" href="about.html">Пра нас</a>
             </li>
+	    <li>
+                <a class="page-scroll" href="services.html">Паслугі</a>
+            </li>
             <li>
                 <a class="page-scroll" href="workshops.html">Майстар-класы</a>
             </li>
