--- a/product-19.html
+++ b/product-19.html
@@ -75,7 +75,7 @@
 <p>DIY-байка (або худзі) "I &lt;3 free software" прысвечана свабоднаму праграмнаму забеспячэнню. Зараз вы можаце замовіць худзі з надпісамі: "I love free software".</p>
 <p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свабодна ўстанаўліваць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свабоднай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па-чацвёртае, вы можаце распаўсюджваць змененую праграму.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/tree/master/love_free_software" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/tree/master/love_free_software" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
