--- a/services.html
+++ b/services.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="майстаркласы, diy, налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, цішоткі">
-    <meta name="author" content="">
+    <meta name="description" content="майстаркласы, размалёўка ровараў, паслугі, уникальные майки, принты своими руками, самаробныя цішоткі, раскраска велосипедов, diy">
+    <meta name="author" content="falanster crew">
 
     <title>Гік-лаўка. Паслугі, майстар-класы і сувеніры для гіка ад супольнасці Фаланстэра</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
@@ -60,7 +60,7 @@
         <!-- Page Header -->
         <div class="row" id="shopping">
             <div class="col-lg-12">
-                <h2 class="page-header">Дзе паўдзельнічаць
+                <h2 class="page-header">Якія паслугі
                     <small>што мы можам</small>
                 </h2>
             </div>
@@ -72,14 +72,14 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">5 р</h3>
-                                <h3><a href="workshop-1.html">Значкі сваімі рукамі</a>
+                                <h3 class="pull-right">Кошт дамоўны</h3>
+                                <h3><a href="service-2.html">Унікальны ровар</a>
                                 </h3>
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="workshop-1.html"><img class="img-responsive" src="images/workshops/w1/mk_signs_cover_mini.JPG" alt=""></a>
-	            <div class="text1"><p>5 руб.</p></div>
+                    <a href="service-2.html"><img class="img-responsive" src="images/services/s2/painted_bike_cover.jpg" alt=""></a>
+	            <div class="text1"><p>Унікальны ровар</p></div>
                 </div>
 
             </div>
@@ -87,32 +87,19 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">5 р</h3>
-                                <h3><a href="workshop-2.html">Вырабляем diy-магніты</a>
+                                <h3 class="pull-right">Кошт дамоўны</h3>
+                                <h3><a href="service-1.html">Свая выява на цішотцы</a>
                                 </h3>
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="workshop-2.html"><img class="img-responsive" src="images/workshops/w2/mk_magnets_cover_mini.JPG" alt=""></a>
-		    <div class="text1"><p>5 руб.</p></div>
+                    <a href="service-1.html"><img class="img-responsive" src="images/services/sq/painted_bike_cover.jpg" alt=""></a>
+		    <div class="text1"><p>Свая выява на цішотцы</p></div>
                 </div>
 
             </div>
 
  
-           <div class="col-md-4 portfolio-item">
-		<div class="caption">
-                                <h3 class="pull-right">5 р</h3>
-                                <h3><a href="workshop-3.html">Ethernet нішцякі</a>
-                                </h3>
-                </div>                
-
-                <div class="img-prod-container">
-                    <a href="workshop-3.html"><img class="img-responsive" src="images/workshops/w3/mesh_stuff_cover.JPG" alt=""></a>
-		    <div class="text1"><p>5 руб.</p></div>
-                </div>
-
-            </div>  
 
 
         </div>
