--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">Кошт дамоўны</h3>
+                                <h3 class="pull-right"></h3>
                                 <h3><a href="service-2.html">Унікальны ровар</a>
                                 </h3>
                 </div>                
@@ -87,13 +87,13 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">Кошт дамоўны</h3>
+                                <h3 class="pull-right"></h3>
                                 <h3><a href="service-1.html">Свая выява на цішотцы</a>
                                 </h3>
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="service-1.html"><img class="img-responsive" src="images/services/sq/painted_bike_cover.jpg" alt=""></a>
+                    <a href="service-1.html"><img class="img-responsive" src="images/services/s2/painted_bike_cover.jpg" alt=""></a>
 		    <div class="text1"><p>Свая выява на цішотцы</p></div>
                 </div>
 
