added new section - service

--- a/services.html
+++ b/services.html
@@ -73,13 +73,13 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right"></h3>
-                                <h3><a href="service-2.html">Унікальны ровар</a>
+                                <h3><a href="service-2.html">Размалюй ровар</a>
                                 </h3>
                 </div>                
 
                 <div class="img-prod-container">
                     <a href="service-2.html"><img class="img-responsive" src="images/services/s2/painted_bike_cover.jpg" alt=""></a>
-	            <div class="text1"><p>Унікальны ровар</p></div>
+	            <div class="text1"><p>Размалюй ровар</p></div>
                 </div>
 
             </div>
@@ -93,7 +93,7 @@
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="service-1.html"><img class="img-responsive" src="images/services/s2/painted_bike_cover.jpg" alt=""></a>
+                    <a href="service-1.html"><img class="img-responsive" src="images/services/s1/space_invader_cover.jpg" alt=""></a>
 		    <div class="text1"><p>Свая выява на цішотцы</p></div>
                 </div>
 
