added picture viewer

--- a/service-1.html
+++ b/service-1.html
@@ -60,8 +60,8 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/services/s1/paint_t_shirts_1_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s1/paint_t_shirts_2_mini.jpg" alt=""></p>
+                <p><img class="img-responsive" src="images/services/s1/paint_t_shirts_1_mini.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s1/paint_t_shirts_2_mini.jpg" alt="" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
