--- a/service-2.html
+++ b/service-2.html
@@ -60,13 +60,13 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/services/s2/painted_bike_1.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_2.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_3.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_4.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_5.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_6.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/services/s2/painted_bike_7.jpg" alt=""></p>
+                <p><img class="img-responsive" src="images/services/s2/painted_bike_1.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_2.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_3.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_4.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_5.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_6.jpg" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/services/s2/painted_bike_7.jpg" alt="" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
