--- a/workshop-1.html
+++ b/workshop-1.html
@@ -60,10 +60,10 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/workshops/w1/mk_signs_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_3_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_4_mini.JPG" alt=""></p>
+                <p><img class="img-responsive" src="images/workshops/w1/mk_signs_1_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_2_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_3_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_4_mini.JPG" alt="" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
