--- a/workshop-3.html
+++ b/workshop-3.html
@@ -60,11 +60,11 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_8_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_4_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_5_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_7_mini.JPG" alt=""></p>
+                <p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_8_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_2_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_4_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_5_mini.JPG" alt="" data-action="zoom"></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_7_mini.JPG" alt="" data-action="zoom"></p>
             </div>
 
             <div class="col-md-4 product-info">
