center social icons

--- a/footer.html
+++ b/footer.html
@@ -29,19 +29,19 @@
             </ul>
         </div>
         <div class="col-md-12">
-            <ul class="pull-right nav navbar-nav socnetwork">
+            <ul class="nav navbar-nav navbar-right">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                <li>
+                <li class="socnetwork">
                     <a href="https://vk.com/geeklauka">
                         <i class="fa fa-vk" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li>
+                <li class="socnetwork">
                     <a href="https://www.facebook.com/geeklauka.by/">
                         <i class="fa fa-facebook-f" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li>
+                <li class="socnetwork">
                     <a href="https://www.instagram.com/geek_lauka/">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
