--- a/navigation.html
+++ b/navigation.html
@@ -22,7 +22,7 @@
             <li>
                 <a class="page-scroll" href="about.html">Пра нас</a>
             </li>
-	    <li>
+	        <li>
                 <a class="page-scroll" href="services.html">Паслугі</a>
             </li>
             <li>
@@ -31,14 +31,14 @@
             <li>
                 <a class="page-scroll" href="#padpiska">Падпіска</a>
             </li>
-            <li>
-                <a href="https://vk.com/geeklauka" class="socnetwork"><i class="fa fa-vk" aria-hidden="true"></i></a>
+            <li class="socnetwork">
+                <a href="https://vk.com/geeklauka"><i class="fa fa-vk" aria-hidden="true"></i></a>
             </li>
-            <li>
-                <a href="https://www.facebook.com/geeklauka.by/" class="socnetwork"><i class="fa fa-facebook-f" aria-hidden="true"></i></a>
+            <li class="socnetwork">
+                <a href="https://www.facebook.com/geeklauka.by/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a>
             </li>
-            <li>
-                <a href="https://www.instagram.com/geek_lauka/" class="socnetwork"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <li class="socnetwork">
+                <a href="https://www.instagram.com/geek_lauka/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
