add highlight, add product page, fix css error

--- a/navigation.html
+++ b/navigation.html
@@ -22,10 +22,13 @@
             <li>
                 <a class="page-scroll" href="about.html">Пра нас</a>
             </li>
-	        <li>
+            <li data-section="products">
+                <a class="page-scroll" href="products.html">Тавары</a>
+            </li>
+	        <li data-section="services">
                 <a class="page-scroll" href="services.html">Паслугі</a>
             </li>
-            <li>
+            <li data-section="workshops">
                 <a class="page-scroll" href="workshops.html">Майстар-класы</a>
             </li>
             <li>
