change colour, add to about

--- a/navigation.html
+++ b/navigation.html
@@ -19,7 +19,7 @@
             <li class="hidden">
                 <a class="page-scroll" href="#page-top"></a>
             </li>
-            <li>
+            <li data-section="about">
                 <a class="page-scroll" href="about.html">Пра нас</a>
             </li>
             <li data-section="products">
