--- a/service-1.html
+++ b/service-1.html
@@ -70,8 +70,8 @@
 
 		<h3 class="vodst-up-30">Што падрыхтаваць:</h3>
 		<ul>
-			<li>Цішотку вашага памера і колера (ці набываеце самастойна, ці дамаўляемся маляваць на нашай).</li>
-			<li>Макет або выяву таго, што жадаеце далучыце спасылкай да замовы.</li>
+			<li>Цішотку вашага памера і колеру (ці набываеце самастойна, ці дамаўляемся маляваць на нашай).</li>
+			<li>Макет або выяву таго, што жадаеце, далучыце спасылкай да замовы.</li>
 		</ul>
 
 		<a href="https://geeklauka.by/contact.html" target="_blank" class="btn btn-lg btn-default page-header">Замовіць паслугу</a>
