--- a/service-2.html
+++ b/service-2.html
@@ -76,7 +76,7 @@
 		<h3 class="vodst-up-30">Наступныя крокі:</h3>
 		<ul>
 			<li>Мы звязваемся з вамі і ўдакладняем ідэю.</li>
-			<li>Вызначаем кошт палугі.</li>
+			<li>Вызначаем кошт паслугі.</li>
 			<li>Робім рэкамендацыі па падрыхтоўцы ровара.</li>
 		</ul>
 
